--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,14 +7,26 @@
   </div>
 </div>
 
-<div class="container my-5">
-  <h4>List</h4>
-    <div class="container card-category">
-      <div class="container card-grid">
-      <div class="cards">
-        <h4><%= @list.name %>
+<div class="container mt-5">
+  <div class="container mt-5">
+        <h4 style="padding: 0 10px 20px 20px;">My lists</h4>
+        <div class="my-3 mx-3">
+        <div class="card-category_2" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
+          <% @bookmarks.each do |bookmark| %>
+         <div style="background-color: #fff;">
+         <img src="https://dummyimage.com/500x200.jpg">
+         <div class="mx-2 my-2" >
+         <p style= "font-size:16px; font-weight: bold; color: #000;"> <%= bookmark.movie.title %></p>
+         <p style= "font-size:13px; color: #000;"><%= bookmark.movie.overview %><p>
+         <div class=" d-flex flex-between ms-auto">
+         <p style= "font-size:16px; font-weight: bold; color: #000;"><%= bookmark.comment %></p>
+         <%= link_to "Delete", list_bookmark_path(bookmark), method: :delete, data: { confirm: "Are you sure?" }, class: "card-remove-link text-danger", style: "font-size: 13px;"%>
+        </div>
+         </div>
+         </div>
+        </div>
       </div>
-    </div>
-  </div>
+        <% end %>
+    <%= link_to "Create a new bookmark", new_list_bookmark_path(@list), class: "btn btn-success text-white rounded-pill ml-3 mt-4 shadow mb-5"%>
 </div>
-
+</div>
